<resources>
  <string name="app_name">Tiny-parents-android</string>

  <string name="hello_world">Hello world!</string>
  <string name="action_settings">Settings</string>
  <string name="default_nickname">Chang Li</string>
  <string name="default_phone_number">13873323232</string>
  <string name="username_edit_text_text">用户名</string>
  <string name="logo_content_description">logo</string>
  <string name="username_label_text">用户名</string>
  <string name="username_edit_text_hint">请输入手机号</string>
  <string name="password_edit_text_hint">请输入密码</string>
  <string name="password_label_text">密码</string>
  <string name="login_button_text">登录</string>
  <string name="preference_file_key">com.cloudiya.app.tiny_parents_preference</string>
  <string name="is_already_login">isAlreadyLogin</string>
  <string name="API_token">APIToken</string>
  <string name="current_parent_ID">currentParentID</string>
  <string name="drawer_home_title">首页</string>
  <string name="drawer_switch_child_title">切换孩子</string>
  <string name="drawer_about_us_title">关于微童年</string>
  <string name="drawer_setting_title">设置</string>
  <string name="nav_header_nickname_default">用户昵称</string>
  <string name="nav_header_phone_number_default">电话号码</string>
  <string name="login_button_text_complete">成功</string>
  <string name="login_button_text_error">失败</string>
  <string name="username_edit_text_empty_input_error">请输入用户名</string>
  <string name="phone_edit_text_empty_input_error">输入的不是手机号</string>
  <string name="password_edit_text_empty_input_error">请输入密码</string>
  <string name="login_land_network_error">网络异常</string>
  <string name="login_button_text_idle">登录</string>
  <string name="login_textview_forgetpassword_text">忘记密码?</string>
  <string name="login_string_api_error">msg</string>
  <string name="setting_button_text_set">设置</string>
  <string name="setting_button_backhome_text">主页</string>
  <string name="setting_button_function_text">功能介绍</string>
  <string name="setting_button_feedback_text">意见反馈</string>
  <string name="setting_button_checkversion_text">版本检测</string>
  <string name="setting_button_cleanbuffer_text">清除缓存</string>
  <string name="setting_button_quit_land_text">退出登陆</string>
  <string name="title_activity_check_version">CheckVersionActivity</string>
  <string name="checkversion_title_text">版本更新</string>
  <string name="checkversion_backsetting_button_text">返回</string>
  <string name="checkversion_feature_text">16452305465103 1546310486165 103581841 1365465013146 5168 16468 s</string>
  <string name="check_version_nowversion_descript">当前版本</string>
  <string name="check_version_endtext">checkversioncheckversioncheckversioncheckversioncheckversioncheckversion</string>
  <string name="password_error_forget_pwd">两次密码不相同</string>
  <string name="password_success_forget_pwd">密码修改成功</string>
  <string name="error_Internet_forget_pwd">网络异常</string>
  <string name="phone_number_hint">请输入手机号码</string>
  <string name="smscode_edit_text">请输入手机验证码</string>
  <string name="btn_button_edit_text">获取短信验证码</string>
  <string name="password_edit_text">请输入密码</string>
  <string name="password_edit_text2">请输入再次输入密码</string>
  <string name="submit_button_text">确定</string>
  <string name="content_feature_text">你想知道什么？你以为我会告诉你吗！我告诉你：我会！</string>
  <string name="text_feature">武汉云雅科技 版权所有
    Copyright 2011-2015 Wuhan
    Cloudiya Tech. All Right Reserved</string>
  <string name="feed_back_hint">意见反馈</string>
  <string name="text_view_hint">说点什么吧....</string>
  <string name="send_button_text">发送</string>
  <string name="password_not_consist_message">两次输入的密码不一致</string>
  <string name="setting_button_title">设置</string>
  <string name="setting_button_logout">退出</string>
  <string name="aboutus_button_title_text">关于我们</string>
  <string name="aboutus_text_company">武汉云雅科技有限公司</string>
  <string name="aboutus_companyaddress_text">武汉市东湖高新区光谷创业街留学生创业园C栋 4146</string>
  <string name="aboutus_service_text">服务热线：</string>
  <string name="aboutus_service_tel2_number">02787204207</string>
  <string name="aboutus_service_tel1_number">4008385286</string>
  <string name="aboutus_business_text">商务合作：</string>
  <string name="aboutus_business_address_text">sale@68baobao.cn</string>
  <string name="aboutus_skill_text">技术支持：</string>
  <string name="aboutus_telphonenumber1">tel:4008385286</string>
  <string name="aboutus_telphonenumber2">tel:02787204207</string>
  <string name="aboutus_sale_address">mailto:http://sale@68baobao.cn</string>
  <string name="aboutus_skill_address_text">support@68baobao.cn</string>
   <string name="aboutus_sendemail_to_skill">mailto:http://support@68baobao.cn</string>
  <string name="aboutus_choose_email_to_sale">Choose Email send to sale@68baobao.cn</string>
  <string name="aboutus_choose_email_to_support">Choose Email send to support@68baobao.cn</string>
  <string name="setting_string_api_error">msg</string>
</resources>

