<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".AboutUsActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    >
    <!--The title button-->
    <Button
        android:id="@+id/feature_button_title"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:text="@string/aboutus_button_title_text"
        android:background="#ffffff"
        android:layout_column="0"
         />
    <!--The feature_text-->
    <TextView
        android:id="@+id/aboutus_text_companyname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:ems="10"
        android:layout_row="1"
        android:layout_column="0"
        android:text="@string/aboutus_text_company"
        android:textSize="20dp"
        android:textStyle="normal"
        />
    <TextView
        android:id="@+id/feature_companyaddress"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/aboutus_companyaddress_text"
        android:layout_row="2"
        android:layout_column="0"
        />
    <TextView
        android:id="@+id/aboutus_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/aboutus_service_text"
        android:layout_row="4"
        android:layout_column="0"
        />
    <Button
        android:id="@+id/aboutus_service_tel2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aboutus_service_tel2_number"
        android:layout_row="10"
        android:layout_column="0"
        android:background="#ffffff"
        />
    <TextView
        android:id="@+id/aboutus_business"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/aboutus_business_text"
        android:layout_row="11"
        android:layout_column="0"
        />
    <Button
        android:id="@+id/aboutus_business_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aboutus_business_address_text"
        android:layout_row="14"
        android:layout_column="0"
        android:background="#ffffff"
        />
    <TextView
        android:id="@+id/aboutus_skill"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/aboutus_skill_text"
        android:layout_row="15"
        android:layout_column="0"
        />
    <Button
        android:id="@+id/aboutus_skill_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aboutus_skill_address_text"
        android:layout_row="16"
        android:layout_column="0"
        android:background="#ffffff"
        />
    <!--The copyright_text-->
    <TextView
        android:id="@+id/feature_multiline_text_copyright"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:layout_row="18"
        android:layout_column="0"
        android:text="     @武汉云雅科技有限公司 版权所有"
        />
    <Button
        android:id="@+id/aboutus_service_tel1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aboutus_service_tel1_number"
        android:layout_row="7"
        android:layout_column="0"
        android:layout_rowSpan="3"
        android:layout_columnSpan="2"
        android:background="#ffffff"
        />

</GridLayout>
