<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


  <com.rengwuxian.materialedittext.MaterialEditText
      android:id="@+id/usernameEditText"
      android:layout_width="200dp"
      android:layout_height="60dp"
      android:inputType="phone"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="53dp"
      android:hint="@string/phone_number_hint"
      app:met_maxCharacters="20"
      />
  <com.rengwuxian.materialedittext.MaterialEditText
      android:id="@+id/code_edit_text"
      android:layout_width="200dp"
      android:layout_height="60dp"
      android:inputType="numberPassword"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="125dp"
      android:hint="@string/smscode_edit_text"
      />
  <com.dd.CircularProgressButton
      android:id="@+id/btn_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/usernameEditText"
      android:layout_toRightOf="@+id/code_edit_text"
      android:layout_toEndOf="@+id/code_edit_text"
      android:text="@string/btn_button_edit_text"
      />
  <com.rengwuxian.materialedittext.MaterialEditText
      android:id="@+id/password_edit_text"
      android:layout_width="200dp"
      android:layout_height="60dp"
      android:inputType="textPassword"
      android:layout_below="@+id/usernameEditText"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="85dp"
      android:hint="@string/password_edit_text"
      app:met_maxCharacters="20"
      />
  <com.rengwuxian.materialedittext.MaterialEditText
      android:id="@+id/password_edit_text2"
      android:layout_width="200dp"
      android:layout_height="60dp"
      android:inputType="textPassword"
      android:layout_below="@+id/usernameEditText"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="155dp"
      android:hint="@string/password_edit_text2"
      app:met_maxCharacters="20"
      />
  <com.dd.CircularProgressButton
      android:id="@+id/submit_button"
      android:layout_width="100dp"
      android:layout_height="54dp"
      android:text="@string/submit_button_text"
      android:layout_below="@+id/password_edit_text2"
      android:layout_centerHorizontal="true"
      android:textSize="18sp"
      />

</RelativeLayout>
