<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="#ffffff"
    >

  <ImageView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/imageView"
      android:layout_alignParentTop="true"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="109dp"
      android:contentDescription="@string/logo_content_description"
      android:src="@mipmap/ic_launcher"
      />
  <com.rengwuxian.materialedittext.MaterialEditText
      android:layout_width="200dp"
      android:layout_height="80dp"
      android:id="@+id/usernameEditText"
      android:inputType="phone"
      android:layout_below="@+id/imageView"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="53dp"
      android:hint="@string/username_edit_text_hint"
      app:met_baseColor="@android:color/black"
      app:met_floatingLabel="highlight"
      app:met_floatingLabelText="@string/username_label_text"
      app:met_floatingLabelTextColor="#33b5e5"
      app:met_maxCharacters="20"
      app:met_primaryColor="#33b5e5"
      app:met_singleLineEllipsis="true"
      />
  <com.rengwuxian.materialedittext.MaterialEditText
      android:layout_width="200dp"
      android:layout_height="80dp"
      android:id="@+id/passwordEditText"
      android:inputType="textPassword"
      android:hint="@string/password_edit_text_hint"
      app:met_baseColor="@android:color/black"
      app:met_floatingLabel="highlight"
      app:met_floatingLabelText="@string/password_label_text"
      app:met_floatingLabelTextColor="#33b5e5"
      app:met_maxCharacters="20"
      app:met_primaryColor="#33b5e5"
      app:met_singleLineEllipsis="true"
      android:layout_below="@+id/usernameEditText"
      android:layout_centerHorizontal="true"
      />
  <com.dd.CircularProgressButton
      android:layout_width="196dp"
      android:layout_height="54dp"
      android:text="@string/login_button_text"
      android:id="@+id/button"
      android:layout_below="@+id/passwordEditText"
      android:layout_centerHorizontal="true"
      android:textColor="@android:color/white"
      android:textSize="18sp"
      app:cpb_textComplete="成功"
      app:cpb_textError="失败"
      app:cpb_textIdle="登录"
      />
</RelativeLayout>